[gd_scene load_steps=13 format=3 uid="uid://bytjnt7nwkrxw"]

[ext_resource type="Script" uid="uid://jdp2hkrg2vm5" path="res://levels/chat_bug/chat_bug.gd" id="1_5iuj2"]
[ext_resource type="PackedScene" uid="uid://ccn8bu53dnlpv" path="res://levels/tps_test_scene/tps_test_scene.tscn" id="2_8coro"]
[ext_resource type="PackedScene" uid="uid://byhcpq4t56qc3" path="res://scenes/UI/chat_ui/chat_ui.tscn" id="3_edd6c"]
[ext_resource type="Theme" uid="uid://b4ekpllfloej0" path="res://scenes/UI/chat_ui/chat_ui_theme.tres" id="4_1crpx"]
[ext_resource type="Texture2D" uid="uid://deoqpv5sf2343" path="res://assets/ui/Gear-1.png" id="5_wba7s"]
[ext_resource type="Texture2D" uid="uid://1q6sfcykos8y" path="res://assets/ui/X.png" id="6_s8ebs"]
[ext_resource type="Texture2D" uid="uid://dlrbue5kaerin" path="res://assets/ui/信息.png" id="7_k337i"]
[ext_resource type="FontFile" uid="uid://dche8c1u6rmg" path="res://scenes/UI/fonts/OPlusSans3-Bold.ttf" id="8_s6dx3"]
[ext_resource type="FontFile" uid="uid://b8muwa7k4021" path="res://scenes/UI/fonts/OPlusSans3-Regular.ttf" id="9_ostp8"]
[ext_resource type="Theme" uid="uid://csjhowu7j47ua" path="res://scenes/UI/TransitionUI/transition.tres" id="10_8coro"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_noujk"]
bg_color = Color(0.53, 0.2491, 0.2818717, 1)
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4v0dd"]
bg_color = Color(0.65, 0.24049999, 0.28827506, 1)
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150

[node name="ChatBug" type="Node"]
script = ExtResource("1_5iuj2")
next_level = ExtResource("2_8coro")

[node name="ChatUI" parent="." instance=ExtResource("3_edd6c")]

[node name="SmallTalkTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="OptionButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 55)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -109.0
offset_right = -46.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(28, 30)
theme = ExtResource("4_1crpx")
icon = ExtResource("5_wba7s")
icon_alignment = 1

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 55)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.5
offset_top = -109.0
offset_right = 30.5
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(28, 30)
theme = ExtResource("4_1crpx")
theme_override_constants/icon_max_width = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_noujk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4v0dd")
theme_override_styles/hover = SubResource("StyleBoxFlat_4v0dd")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_4v0dd")
theme_override_styles/focus = SubResource("StyleBoxFlat_4v0dd")
icon = ExtResource("6_s8ebs")
icon_alignment = 1

[node name="InfoButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 55)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 47.0
offset_top = -109.0
offset_right = 107.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(28, 30)
theme = ExtResource("4_1crpx")
icon = ExtResource("7_k337i")
icon_alignment = 1

[node name="Reload" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Black" type="ColorRect" parent="Reload"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Reload"]
layout_mode = 0
offset_left = 135.0
offset_top = 417.0
offset_right = 635.0
offset_bottom = 562.0
theme = ExtResource("4_1crpx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_s6dx3")
theme_override_font_sizes/font_size = 50
text = ":(
我遇到了一些问题。"

[node name="Label2" type="Label" parent="Reload"]
layout_mode = 0
offset_left = 135.0
offset_top = 481.0
offset_right = 635.0
offset_bottom = 626.0
theme = ExtResource("4_1crpx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_ostp8")
theme_override_font_sizes/font_size = 50
text = "
正在尝试重新启动"

[node name="MorningTransition" type="Control" parent="."]
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MorningTransition"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.98820907, 0.6305797, 3.85046e-07, 1)

[node name="Label" type="Label" parent="MorningTransition"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_8coro")
theme_override_font_sizes/font_size = 150
text = "星期天"

[node name="NextLevelTransition" type="Control" parent="."]
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="NextLevelTransition"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NextLevelTransition"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_8coro")
theme_override_colors/font_color = Color(0.06469653, 0.06469653, 0.06469653, 1)
theme_override_font_sizes/font_size = 150
text = "正在复原初始设置"

[node name="Label2" type="Label" parent="NextLevelTransition"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 421.0
offset_right = 90.0
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_8coro")
theme_override_colors/font_color = Color(0.06469653, 0.06469653, 0.06469653, 1)
theme_override_font_sizes/font_size = 30
text = "输入命令\"idontwannarestart\"中断复原"

[connection signal="line_edit_focus" from="ChatUI" to="." method="_on_chat_ui_line_edit_focus"]
[connection signal="sent_text" from="ChatUI" to="." method="_on_chat_ui_sent_text"]
[connection signal="timeout" from="SmallTalkTimer" to="." method="_on_small_talk_timer_timeout"]
[connection signal="pressed" from="OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
